project--tech - flex-wrap

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <h4 class="project--title h-md">Unsplash Clone</h4>
               <div class="project--tech">
                 <span>HTML</span><span>CSS</span><span>JavaScript</span
-                ><span>ReactJS</span><span>API</span>
+                ><span>React.JS</span><span>API</span>
               </div>
               <div class="project--links">
                 <a
@@ -284,7 +284,7 @@
               <h4 class="project--title h-md">Keeper - Google Keep Clone</h4>
               <div class="project--tech">
                 <span>HTML</span><span>CSS</span><span>JavaScript</span
-                ><span>ReactJS</span><span>Material UI</span>
+                ><span>React.JS</span><span>Material UI</span>
               </div>
               <div class="project--links">
                 <a
@@ -317,7 +317,8 @@
               <h4 class="project--title h-md">Secrets Web App</h4>
               <div class="project--tech">
                 <span>HTML</span><span>CSS</span><span>Javascript</span
-                ><span>NodeJS</span><span>MongoDB</span><span>PassportJS</span>
+                ><span>Node.JS</span><span>MongoDB</span
+                ><span>Passport.JS</span>
               </div>
               <div class="project--links">
                 <a
@@ -350,7 +351,7 @@
               <h4 class="project--title h-md">ToDo Web App</h4>
               <div class="project--tech">
                 <span>HTML</span><span>CSS</span><span>Javascript</span
-                ><span>NodeJS</span><span>MongoDB</span>
+                ><span>Node.JS</span><span>MongoDB</span>
               </div>
               <div class="project--links">
                 <a
