--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Frontend Mentor | Single-page developer portfolio</title>
+    <title>Bhoami K Khona | Portfolio</title>
 
     <!-- Favicon -->
     <link
