--- a/index.html
+++ b/index.html
@@ -168,7 +168,12 @@
             href="#contact"
             >contact me</a
           >
-          <a class="link-btn hero--btn" href="#">résumé</a>
+          <a
+            target="_blank"
+            class="link-btn hero--btn"
+            href="./assets/pdfs/bhoamikkhona-resume.pdf"
+            >résumé</a
+          >
           <img
             class="hero--circle"
             src="./assets/images/pattern-circle.svg"
