updated contact me link

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="projects--wrapper">
           <div class="heading-box">
             <h2 class="h-xl">Projects</h2>
-            <a class="link-btn" href="#">contact me</a>
+            <a class="link-btn" href="#contact">contact me</a>
           </div>
           <div class="projects--gallery">
             <div class="project--box">
