simon project link updates

--- a/index.html
+++ b/index.html
@@ -425,13 +425,13 @@
               <div class="project--links">
                 <a
                   target="_blank"
-                  href="https://bhoamikhona.github.io/web-development-bootcamp/Section%2015/simon.html"
+                  href="https://bhoamikhona.github.io/games/simon/index.html"
                   class="link-btn"
                   >View Project</a
                 >
                 <a
                   target="_blank"
-                  href="https://github.com/bhoamikhona/web-development-bootcamp/tree/main/Section%2015"
+                  href="https://github.com/bhoamikhona/games/tree/main/simon"
                   class="link-btn"
                   >View Code</a
                 >
