--- a/index.html
+++ b/index.html
@@ -245,29 +245,29 @@
               <picture class="project--picture">
                 <source
                   media="(min-width: 78.125em)"
-                  srcset="./assets/images/unsplash-clone-lg.png"
+                  srcset="./assets/images/proshop-lg.png"
                 />
                 <img
                   class="project--image"
-                  src="./assets/images/unsplash-clone-sm.png"
-                  alt="Unsplash Clone"
+                  src="./assets/images/proshop-sm.png"
+                  alt="Keeper App Image"
                 />
               </picture>
-              <h4 class="project--title h-md">Unsplash Clone</h4>
+              <h4 class="project--title h-md">Proshop e-commerce</h4>
               <div class="project--tech">
-                <span>HTML</span><span>CSS</span><span>JavaScript</span
-                ><span>React.JS</span><span>API</span>
+                <span>React.js</span><span>Node.js</span><span>Express.js</span
+                ><span>MongoDB</span><span>React-Bootstrap</span>
               </div>
               <div class="project--links">
                 <a
                   target="_blank"
-                  href="https://usplash.vercel.app/"
+                  href="https://proshop-hd7x.onrender.com/"
                   class="link-btn"
                   >View Project</a
                 >
                 <a
                   target="_blank"
-                  href="https://github.com/bhoamikhona/usplash"
+                  href="https://github.com/bhoamikhona/proshop-mern"
                   class="link-btn"
                   >View Code</a
                 >
@@ -278,29 +278,60 @@
               <picture class="project--picture">
                 <source
                   media="(min-width: 78.125em)"
-                  srcset="./assets/images/keeper-clone-lg.png"
+                  srcset="./assets/images/countries-lg.png"
                 />
                 <img
                   class="project--image"
-                  src="./assets/images/keeper-clone-sm.png"
-                  alt="Keeper App Image"
+                  src="./assets/images/countries-sm.png"
+                  alt="Countries Web App"
                 />
               </picture>
-              <h4 class="project--title h-md">Keeper - Google Keep Clone</h4>
+              <h4 class="project--title h-md">Countries Web App</h4>
               <div class="project--tech">
-                <span>HTML</span><span>CSS</span><span>JavaScript</span
-                ><span>React.JS</span><span>Material UI</span>
+                <span>React.js</span><span>CSS</span><span>API</span>
               </div>
               <div class="project--links">
                 <a
                   target="_blank"
-                  href="https://keeper-ruby.vercel.app/"
+                  href="https://countries-react-virid.vercel.app/"
                   class="link-btn"
                   >View Project</a
                 >
                 <a
                   target="_blank"
-                  href="https://github.com/bhoamikhona/web-development-bootcamp/tree/main/Section%2033"
+                  href="https://github.com/bhoamikhona/countries-react"
+                  class="link-btn"
+                  >View Code</a
+                >
+              </div>
+            </div>
+
+            <div class="project--box">
+              <picture class="project--picture">
+                <source
+                  media="(min-width: 78.125em)"
+                  srcset="./assets/images/dictionary-lg.png"
+                />
+                <img
+                  class="project--image"
+                  src="./assets/images/dictionary-sm.png"
+                  alt="Keeper App Image"
+                />
+              </picture>
+              <h4 class="project--title h-md">Dictionary Web App</h4>
+              <div class="project--tech">
+                <span>React.js</span><span>CSS</span><span>API</span>
+              </div>
+              <div class="project--links">
+                <a
+                  target="_blank"
+                  href="https://dictionary-web-app-bhoami-nine.vercel.app/"
+                  class="link-btn"
+                  >View Project</a
+                >
+                <a
+                  target="_blank"
+                  href="https://github.com/bhoamikhona/frontend-mentor-challenges/tree/main/dictionary-web-app"
                   class="link-btn"
                   >View Code</a
                 >
